fix: fixed background and column spacing

--- a/src/app/pages/board/board.scss
+++ b/src/app/pages/board/board.scss
@@ -22,6 +22,7 @@ section {
 	}
 	&__search {
 		padding: .5rem 1rem;
+		background: #fff;
 		border: 1px solid $board-border;
 		border-radius: radius(medium);
 		gap: 10px;
