--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@
 html,
 body {
 	margin: 0;
+	background-color: #f6f7f8;
 }
 
 body:has(.task-modal),
